# control_quadrupeds_soft_contacts

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .swp  CHANGELOG.rst  Dockerfile  README.md  build.bash  build.sh  run.bash
motion_control/motion_generation/static_walk_planner/: CMakeLists.txt
motion_control/motion_generation/static_walk_planner/include/static_walk_planner/: static_walk_planner.hpp
motion_control/motion_generation/static_walk_planner/src/: static_walk_planner.cpp
motion_control/whole_body_control/hierarchical_optimization/: CMakeLists.txt  package.xml
motion_control/whole_body_control/hierarchical_optimization/include/hierarchical_optimization/: hierarchical_qp.hpp  hierarchical_qp.tpp
motion_control/whole_body_control/hierarchical_optimization/src/: hierarchical_qp.cpp
motion_control/whole_body_control/hierarchical_optimization/test/: test_hierarchical_optimization.cpp
motion_control/whole_body_control/whole_body_controller/: CMakeLists.txt
motion_control/whole_body_control/whole_body_controller/include/whole_body_controller/: control_tasks.hpp  deformations_history_manager.hpp  prioritized_tasks.hpp  whole_body_controller.hpp
motion_control/whole_body_control/whole_body_controller/src/: control_tasks.cpp  deformations_history_manager.cpp  prioritized_tasks.cpp
motion_control/whole_body_control/whole_body_controller/test/: test_control_tasks.cpp  test_prioritized_tasks.cpp  test_whole_body_controller.cpp
robot/robot_model/: package.xml
robot/robot_model/robots/: all_robots.yaml
robot/robot_model/src/: robot_model.cpp
robot_model/: CMakeLists.txt  package.xml
robot_model/include/robot_model/: robot_model.hpp
robot_model/robots/: all_robots.yaml
robot_model/robots/anymal_c_simple_description/: CMakeLists.txt  package.xml
robot_model/robots/anymal_c_simple_description/urdf/: anymal.urdf  anymal.xacro  anymal_gazebo.xacro
robot_model/src/: robot_model.cpp
robot_model/test/: test_robot_model.cpp
src/motion_control/generalized_pose_msgs/: CMakeLists.txt  package.xml
src/motion_control/generalized_pose_msgs/include/generalized_pose_msgs/: generalized_pose_struct.hpp
src/motion_control/generalized_pose_msgs/msg/: GeneralizedPose.msg  GeneralizedPoseWithTime.msg  GeneralizedPosesWithTime.msg
src/motion_control/motion_generation/lip_walking_trot_planner/: CMakeLists.txt  lip_walking_trot_planner_controller.xml  package.xml
src/motion_control/motion_generation/lip_walking_trot_planner/src/: interpolator.cpp  lip_planner.cpp  lip_walking_trot_planner_controller.cpp  quaternion_math.cpp
src/motion_control/motion_generation/lip_walking_trot_planner/test/: test_interpolator.cpp
src/motion_control/motion_generation/planners_python/: package.xml  setup.cfg  setup.py
src/motion_control/motion_generation/planners_python/planners_python/: debug_planner_node.py  planner_mjp_node.py  planner_static_walk_node.py
src/motion_control/motion_generation/static_walk_planner/: CMakeLists.txt  package.xml  static_walk_planner_controller.xml
src/motion_control/motion_generation/static_walk_planner/src/: static_walk_planner.cpp  static_walk_planner_controller.cpp
src/motion_control/motion_generation/static_walk_planner/test/: test.cpp
src/motion_control/motion_generation/teleoperate_robot/: CMakeLists.txt  package.xml
src/motion_control/motion_generation/teleoperate_robot/launch/: teleop_robot_base.launch.py  teleop_velocity_command.launch.py
src/motion_control/motion_generation/teleoperate_robot/src/: teleop_robot_base_node.cpp  teleop_velocity_command_node.cpp
src/motion_control/whole_body_control/hierarchical_optimization/: CMakeLists.txt  package.xml
src/motion_control/whole_body_control/hierarchical_optimization/src/: hierarchical_qp.cpp
src/motion_control/whole_body_control/hierarchical_optimization/test/: test_hierarchical_optimization.cpp
src/motion_control/whole_body_control/hqp_controller/: CMakeLists.txt  hqp_controller.xml  package.xml
src/motion_control/whole_body_control/hqp_controller/src/: hqp_controller.cpp  hqp_controller_node.cpp  hqp_publisher.cpp
src/motion_control/whole_body_control/hqp_controller/test/: test_load_hqp_controller.cpp
src/motion_control/whole_body_control/whole_body_controller/: CMakeLists.txt  package.xml
src/motion_control/whole_body_control/whole_body_controller/src/: control_tasks.cpp  deformations_history_manager.cpp  mpc_control_tasks.cpp  mpc_prioritized_tasks.cpp  mpc_whole_body_controller.cpp  prioritized_tasks.cpp  whole_body_controller.cpp
src/motion_control/whole_body_control/whole_body_controller/test/: test_control_tasks.cpp  test_deformations_history_manager.cpp  test_prioritized_tasks.cpp  test_whole_body_controller.cpp
src/robot/robot_control/: CMakeLists.txt  package.xml
src/robot/robot_gazebo/: CMakeLists.txt  package.xml
src/robot/robot_gazebo/config/: gazebo_params.yaml
src/robot/robot_gazebo/config/rviz/: config.rviz  (+2 more)
src/robot/robot_gazebo/env-hooks/: robot_gazebo.dsv.in
src/robot/robot_gazebo/launch/: anymal.launch.py  anymal_c.launch.py  anymal_c_softfoot_q.launch.py  mulinex.launch.py  reset_robot.launch.py  robot.launch.py  solo.launch.py  solo12.launch.py  unitree_a1.launch.py
src/robot/robot_gazebo/objects/: heightmap_terrain.xacro  multi_terrains.xacro  rigid_terrain.sdf  rigid_terrain.xacro  soft_mattress.sdf  soft_terrain.sdf  soft_terrain.xacro  terrain.xacro  terrain_increasing_slope.xacro
src/robot/robot_gazebo/scripts/: generate_heightmap_mesh.py
src/robot/robot_gazebo/worlds/: anymal.world  anymal_softfoot.world  solo.world
src/rviz_legged/rviz_legged_plugins/: CMakeLists.txt  package.xml  plugins_description.xml  rviz_legged_plugins-extras.cmake
src/rviz_legged/rviz_legged_plugins/scripts/: ground_to_base_frame_broadcaster_node.py  terrain_projector_node.py
src/temp_pkg/: CMakeLists.txt  package.xml
src/temp_pkg/include/temp_pkg/: eiquadprog.hpp  linear-algebra.c  qr-update.c  solve.QP.c
src/temp_pkg/test/: test.cpp
test_pkg/: CMakeLists.txt  package.xml
test_pkg/test/: test_robot_model.cpp
(+112 files in other folders)
