<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>robot_control</name>
    <version>0.0.0</version>
    <description>Config files for ROS 2 controllers in control_quadrupeds_soft_contacts</description>
    <maintainer email="davide.debenedittis@gmail.com">Davide De Benedittis</maintainer>
    <license>TODO: License declaration</license>

    <url>https://github.com/ddebenedittis/control_quadrupeds_soft_contacts</url>
    <author email="davide.debenedittis@gmail.com">Davide De Benedittis</author>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
