<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>robot_gazebo</name>
    <version>0.0.0</version>
    <description>Launch files to simulate quadrupedal robots in Gazebo</description>
    <maintainer email="davide.debenedittis@gmail.com">Davide De Benedittis</maintainer>
    <license>TODO: License declaration</license>

    <url>https://github.com/ddebenedittis/control_quadrupeds_soft_contacts</url>
    <author email="davide.debenedittis@gmail.com">Davide De Benedittis</author>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <buildtool_depend>ament_cmake_python</buildtool_depend>

    <exec_depend>gazebo_ros</exec_depend>
    <exec_depend>gazebo_ros_pkgs</exec_depend>
    <exec_depend>effort_controllers</exec_depend>
    <exec_depend>imu_sensor_broadcaster</exec_depend>
    <exec_depend>joint_state_broadcaster</exec_depend>
    <exec_depend>xacro</exec_depend>

    <exec_depend>anymal_c_simple_description</exec_depend>
    <exec_depend>solo_description</exec_depend>

    <depend>rclpy</depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_cmake</build_type>

        <gazebo_ros gazebo_model_path="${prefix}/models"/>
    </export>
</package>
