<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>planners_python</name>
    <version>0.0.0</version>
    <description>Static walk planner and walking trot planner based on MPC for quadrupedal robots</description>
    <maintainer email="davide.debenedittis@gmail.com">Davide De Benedittis</maintainer>
    <license>TODO: License declaration</license>

    <url>https://github.com/ddebenedittis/control_quadrupeds_soft_contacts</url>
    <author email="davide.debenedittis@gmail.com">Davide De Benedittis</author>

    <test_depend>ament_copyright</test_depend>
    <test_depend>ament_flake8</test_depend>
    <test_depend>ament_pep257</test_depend>
    <test_depend>python3-pytest</test_depend>

    <buildtool_depend>ament_python</buildtool_depend>

    <depend>rclpy</depend>
    
    <depend>gazebo_msgs</depend>
    <depend>generalized_pose_msgs</depend>
    <depend>velocity_command_msgs</depend>
    <depend>sensor_msgs</depend>

    <export>
        <build_type>ament_python</build_type>
    </export>
</package>
