<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>static_walk_planner</name>
    <version>0.0.0</version>
    <description>TODO: Package description</description>
    <maintainer email="davide.debenedittis@gmail.com">Davide De Benedittis</maintainer>
    <license>TODO: License declaration</license>

    <author>Davide De Benedittis</author>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <build_depend>eigen</build_depend>
    <build_export_depend>eigen</build_export_depend> <!-- If your package uses Eigen3 in public headers, then also add these tags so downstream packages also depend on this package and Eigen3. -->

    <depend>rclcpp</depend>

    <depend>controller_interface</depend>
    <depend>hardware_interface</depend>
    <depend>pluginlib</depend>
    <depend>rclcpp_lifecycle</depend>

    <depend>controller_manager</depend>

    <depend>generalized_pose_msgs</depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
